Add assets and finalize About section

--- a/index.html
+++ b/index.html
@@ -23,6 +23,39 @@
       <h2>Hi there.</h2>
       <h3>I'm Irene Panis, a web developer and software engineer based in Southern California.</h3>
   </section>
+
+  <section id="about" class="content">
+    <h4 class="heading">A b o u t</h4>
+    <div class="divider"></div>
+    <section class="about-para">
+      <p>A life-long lover of puzzle-solving with an obsession with the details and numbers, once I got my first taste of programming I knew I was hooked. I graduated from UC San Diego in 2022 with a B.A. in Psychology, but I felt my skills and interests beckoning me to a different field. As a result, I'm currently enrolled in The Coding Bootcamp with UC San Diego Extended Studies as I seek a career in web development and software engineering.</p>
+      <p>Outside of programming, my hobbies include gaming/esports, Twitch, and writing. Most of the time you'll catch me watching a stream or neck-deep in a VALORANT match. :)</p>
+    </section>
+  </section>
+
+  <section id="work" class="content">
+    <h4 class="heading">W o r k</h4>
+    <div class="divider"></div>
+    <section class="work-img">
+      <div id="first">
+        <span class="img-title">Library</span>
+      </div>
+      <div id="second" class="other-work">
+        <span class="img-title">Admin Dashboard</span>
+      </div>
+      <div id="third" class="other-work">
+        <span class="img-title">Etch-A-Sketch</span>
+      </div>
+      <div id="fourth" class="other-work">
+        <span class="img-title">Rock Paper Scissors</span>
+      </div>
+      <div id="fifth" class="other-work">
+        <span class="img-title">Sign-Up Form</span>
+      </div>
+    </section>
+  </section>
+
+  <section id="contact"></section>
     
 </body>
 </html>
