Organize divs for work section

--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
       <h1>irene panis.</h1>
       <nav>
           <ul>
-              <li><a href="#">home</a></li>
-              <li><a href="#">about</a></li>
-              <li><a href="#">work</a></li>
-              <li><a href="#">contact</a></li>
+              <li><a href="#home">home</a></li>
+              <li><a href="#about">about</a></li>
+              <li><a href="#work">work</a></li>
+              <li><a href="#contact">contact</a></li>
           </ul>
       </nav>
   </header>
-  <section id="hero">
+  <section id="home">
       <h2>Hi there.</h2>
       <h3>I'm Irene Panis, a web developer and software engineer based in Southern California.</h3>
   </section>
@@ -37,25 +37,36 @@
     <h4 class="heading">W o r k</h4>
     <div class="divider"></div>
     <section class="work-img">
-      <div id="first">
-        <span class="img-title">Library</span>
+      <div class="proj">
+        <a href="https://github.com/irene-panis/library"><img src="assets/img/library.jpg"></a>
+        <span id="first" class="proj-title">Library</span>
       </div>
-      <div id="second" class="other-work">
-        <span class="img-title">Admin Dashboard</span>
+      <div class="proj">
+        <a href="https://github.com/irene-panis/admin-dashboard"><img src="assets/img/admin.jpg"></a>
+        <span class="proj-title">Admin Dashboard</span>
       </div>
-      <div id="third" class="other-work">
-        <span class="img-title">Etch-A-Sketch</span>
+      <div class="proj">
+        <a href="https://github.com/irene-panis/etch-a-sketch"><img src="assets/img/etch.jpg"></a>
+        <span class="proj-title">Etch-A-Sketch</span>
       </div>
-      <div id="fourth" class="other-work">
-        <span class="img-title">Rock Paper Scissors</span>
+      <div class="proj">
+        <a href="https://github.com/irene-panis/rock-paper-scissors"><img src="assets/img/rps.jpg"></a>
+        <span class="proj-title">Rock Paper Scissors</span>
       </div>
-      <div id="fifth" class="other-work">
-        <span class="img-title">Sign-Up Form</span>
+      <div class="proj">
+        <a href="https://github.com/irene-panis/sign-up-form"><img src="assets/img/sign.jpg"></a>
+        <span class="proj-title">Sign-Up Form</span>
       </div>
     </section>
   </section>
 
-  <section id="contact"></section>
+  <section id="contact" class="content">
+    <h4 class="heading">C o n t a c t</h4>
+    <div class="divider"></div>
+    <section class="contact-links">
+
+    </section>
+  </section>
     
 </body>
 </html>
