--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
       <h1>irene panis.</h1>
       <nav>
           <ul>
-              <li><a href="#home">home</a></li>
               <li><a href="#about">about</a></li>
               <li><a href="#work">work</a></li>
               <li><a href="#contact">contact</a></li>
+              <li><a href="#">resume</a></li>
           </ul>
       </nav>
   </header>
@@ -64,9 +64,16 @@
     <h4 class="heading">C o n t a c t</h4>
     <div class="divider"></div>
     <section class="contact-links">
-
+      <p>Interested in working with me or just want to have a chat? Find me here:</p>
+      <div class="icon-container">
+        <a id="linkedin" href="https://www.linkedin.com/in/irene-panis/"><img class="icon" src="assets/img/linkedin.png"></a>
+        <a id="github" href="https://github.com/irene-panis"><img class="icon" src="assets/img/github.png"></a>
+        <a id="email" href="mailto: panisirene@gmail.com"><img class="icon" src="assets/img/email.png"></a>
+      </div>
     </section>
   </section>
+
+  <img id="avatar" src="assets/img/avatar.png">
     
 </body>
 </html>
