Add clickable icon for resume

--- a/index.html
+++ b/index.html
@@ -72,7 +72,12 @@
     </section>
   </section>
 
-  <img id="avatar" src="assets/img/avatar.png">
+  <div class="resume">
+    <a class="res-link" href="#">
+      <img id="avatar" src="assets/img/avatar.png">
+    </a>
+    <span class="tooltip">Click me for my resume!</span>
+  </div>
     
 </body>
 </html>
