Add box shadow to header

--- a/index.html
+++ b/index.html
@@ -73,9 +73,7 @@
   </section>
 
   <div class="resume">
-    <a class="res-link" href="#">
-      <img id="avatar" src="assets/img/avatar.png">
-    </a>
+    <a href="#"><img id="avatar" src="assets/img/avatar.png"></a>
     <span class="tooltip">Click me for my resume!</span>
   </div>
     
