Add responsive design and comments

--- a/index.html
+++ b/index.html
@@ -72,8 +72,9 @@
     </section>
   </section>
 
+  <!-- moving avatar icon, click for resume -->
   <div class="resume">
-    <a href="#"><img id="avatar" src="assets/img/avatar.png"></a>
+    <a href=""><img id="avatar" src="assets/img/avatar.png"></a>
     <span class="tooltip">Click me for my resume!</span>
   </div>
     
