Add new projects to work section

--- a/index.html
+++ b/index.html
@@ -37,24 +37,24 @@
     <div class="divider"></div>
     <section class="work-img">
       <div class="proj">
+        <a href="https://github.com/irene-panis/pokemon-index"><img src="assets/img/pokedex.jpg"></a>
+        <span id="first" class="proj-title">Pokedex</span>
+      </div>
+      <div class="proj">
+        <a href="https://github.com/irene-panis/weather-app"><img src="assets/img/weatherapp.jpg"></a>
+        <span class="proj-title">Weather App</span>
+      </div>
+      <div class="proj">
+        <a href="https://github.com/irene-panis/javascript-quiz"><img src="assets/img/codingquiz.jpg"></a>
+        <span class="proj-title">JavaScript Quiz</span>
+      </div>
+      <div class="proj">
         <a href="https://github.com/irene-panis/library"><img src="assets/img/library.jpg"></a>
-        <span id="first" class="proj-title">Library</span>
+        <span class="proj-title">Library</span>
       </div>
       <div class="proj">
         <a href="https://github.com/irene-panis/admin-dashboard"><img src="assets/img/admin.jpg"></a>
         <span class="proj-title">Admin Dashboard</span>
-      </div>
-      <div class="proj">
-        <a href="https://github.com/irene-panis/etch-a-sketch"><img src="assets/img/etch.jpg"></a>
-        <span class="proj-title">Etch-A-Sketch</span>
-      </div>
-      <div class="proj">
-        <a href="https://github.com/irene-panis/rock-paper-scissors"><img src="assets/img/rps.jpg"></a>
-        <span class="proj-title">Rock Paper Scissors</span>
-      </div>
-      <div class="proj">
-        <a href="https://github.com/irene-panis/sign-up-form"><img src="assets/img/sign.jpg"></a>
-        <span class="proj-title">Sign-Up Form</span>
       </div>
     </section>
   </section>
