add dagobah depot project

--- a/index.html
+++ b/index.html
@@ -37,8 +37,12 @@
     <div class="divider"></div>
     <section class="work-img">
       <div class="proj">
+        <a href="https://github.com/irene-panis/dagobah-depot"><img src="assets/img/dagobah.jpg"></a>
+        <span id="first" class="proj-title">Dagobah Depot</span>
+      </div>
+      <div class="proj">
         <a href="https://github.com/irene-panis/pokemon-index"><img src="assets/img/pokedex.jpg"></a>
-        <span id="first" class="proj-title">Pokedex</span>
+        <span class="proj-title">Pokedex</span>
       </div>
       <div class="proj">
         <a href="https://github.com/irene-panis/weather-app"><img src="assets/img/weatherapp.jpg"></a>
@@ -51,10 +55,6 @@
       <div class="proj">
         <a href="https://github.com/irene-panis/library"><img src="assets/img/library.jpg"></a>
         <span class="proj-title">Library</span>
-      </div>
-      <div class="proj">
-        <a href="https://github.com/irene-panis/admin-dashboard"><img src="assets/img/admin.jpg"></a>
-        <span class="proj-title">Admin Dashboard</span>
       </div>
     </section>
   </section>
