--- a/index.html
+++ b/index.html
@@ -67,14 +67,14 @@
       <div class="icon-container">
         <a id="linkedin" href="https://www.linkedin.com/in/irene-panis/"><img class="icon" src="assets/img/linkedin.png"></a>
         <a id="github" href="https://github.com/irene-panis"><img class="icon" src="assets/img/github.png"></a>
-        <a id="email" href="mailto: panisirene@gmail.com"><img class="icon" src="assets/img/email.png"></a>
+        <a id="email" href="mailto: irenempanis@gmail.com"><img class="icon" src="assets/img/email.png"></a>
       </div>
     </section>
   </section>
 
   <!-- moving avatar icon, click for resume -->
   <div class="resume">
-    <a href=""><img id="avatar" src="assets/img/avatar.png"></a>
+    <a href="https://drive.google.com/file/d/1rdc0xt2RHkwLkeyGw0jsDW0wutuTCP0u/view?usp=sharing"><img id="avatar" src="assets/img/avatar.png"></a>
     <span class="tooltip">Click me for my resume!</span>
   </div>
     
