--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
   <!-- moving avatar icon, click for resume -->
   <div class="resume">
-    <a href="https://drive.google.com/file/d/1rdc0xt2RHkwLkeyGw0jsDW0wutuTCP0u/view?usp=sharing"><img id="avatar" src="assets/img/avatar.png"></a>
+    <a href="assets/misc/Irene Panis Developer Resume.pdf" target="_blank"><img id="avatar" src="assets/img/avatar.png"></a>
     <span class="tooltip">Click me for my resume!</span>
   </div>
     
