add overlays to display proj descriptions

--- a/index.html
+++ b/index.html
@@ -37,24 +37,64 @@
     <div class="divider"></div>
     <section class="work-img">
       <div class="proj">
-        <a href="https://github.com/irene-panis/dagobah-depot"><img src="assets/img/dagobah.jpg"></a>
+        <img src="assets/img/dagobah.jpg">
         <span id="first" class="proj-title">Dagobah Depot</span>
+        <div class="overlay">
+          <span>A Star Wars-themed community marketplace built with two other team members. Full-stack application.</span>
+          <span>Sequelize ORM, Node.js, Express.js, Handlebars.js, Stripe.js</span>
+          <div class="proj-links">
+            <span><a href="https://dagobah-depot-34081fe1df5e.herokuapp.com/">Live</a></span>
+            <span><a href="https://github.com/irene-panis/dagobah-depot">GitHub</a></span>
+          </div>
+        </div>
       </div>
       <div class="proj">
-        <a href="https://github.com/irene-panis/pokemon-index"><img src="assets/img/pokedex.jpg"></a>
+        <img src="assets/img/ensemble.png">
+        <span class="proj-title">Ensemble Blog</span>
+        <div class="overlay small">
+          <span>Simple blog that allows users to sign up or log in and create posts and comments. Full-stack application.</span>
+          <span>Bulma CSS, Node.js, Express.js, Sequelize ORM, Handlebars.js</span>
+          <div class="proj-links">
+            <span><a href="https://ensemble-blog-bfd105093377.herokuapp.com/">Live</a></span>
+            <span><a href="https://github.com/irene-panis/ensemble-blog">GitHub</a></span>
+          </div>
+        </div>
+      </div>
+      <div class="proj">
+        <img src="assets/img/pokedex.jpg">
         <span class="proj-title">Pokedex</span>
+        <div class="overlay small">
+          <span>A simple application for creating Pokemon teams and viewing Pokemon information.</span>
+          <span>HTML, Tailwind CSS, JavaScript, jQuery, RESTful APIs</span>
+          <div class="proj-links">
+            <span><a href="https://linuscth.github.io/pokemon-index/">Live</a></span>
+            <span><a href="https://github.com/irene-panis/pokemon-index">GitHub</a></span>
+          </div>
+        </div>
       </div>
       <div class="proj">
-        <a href="https://github.com/irene-panis/weather-app"><img src="assets/img/weatherapp.jpg"></a>
+        <img src="assets/img/weatherapp.jpg">
         <span class="proj-title">Weather App</span>
+        <div class="overlay small">
+          <span>A small weather app that displays current weather info and five-day forecast for any given city using Weather API.</span>
+          <span>HTML, Bootstrap CSS, JavaScript, jQuery, RESTful APIs, Day.js</span>
+          <div class="proj-links">
+            <span><a href="https://irene-panis.github.io/weather-app/">Live</a></span>
+            <span><a href="https://github.com/irene-panis/weather-app">GitHub</a></span>
+          </div>
+        </div>
       </div>
       <div class="proj">
-        <a href="https://github.com/irene-panis/javascript-quiz"><img src="assets/img/codingquiz.jpg"></a>
+        <img src="assets/img/codingquiz.jpg">
         <span class="proj-title">JavaScript Quiz</span>
-      </div>
-      <div class="proj">
-        <a href="https://github.com/irene-panis/library"><img src="assets/img/library.jpg"></a>
-        <span class="proj-title">Library</span>
+        <div class="overlay small">
+          <span>Quiz app that asks JavaScript questions and allows users to save their scores in local storage.</span>
+          <span>HTML, CSS, JavaScript</span>
+          <div class="proj-links">
+            <span><a href="https://irene-panis.github.io/javascript-quiz/">Live</a></span>
+            <span><a href="https://github.com/irene-panis/javascript-quiz">GitHub</a></span>
+          </div>
+        </div>
       </div>
     </section>
   </section>
