--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
       <div class="icon-container">
         <a id="linkedin" href="https://www.linkedin.com/in/irene-panis/"><img class="icon" src="assets/img/linkedin.png"></a>
         <a id="github" href="https://github.com/irene-panis"><img class="icon" src="assets/img/github.png"></a>
-        <a id="email" href="mailto: irenempanis@gmail.com"><img class="icon" src="assets/img/email.png"></a>
       </div>
+      <span>Email: irenempanis@gmail.com</span>
     </section>
   </section>
 
