--- a/index.html
+++ b/index.html
@@ -5,7 +5,16 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>irene panis | web developer</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
   <link rel="stylesheet" href="assets/css/style.css">
+  <script src="
+    https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js
+  "></script>
+  <script>
+    $(document).ready(function () {
+      $("#modal").modal('show');
+    });
+  </script>
 </head>
 <body>
   <header>
@@ -18,6 +27,21 @@
           </ul>
       </nav>
   </header>
+
+  <div id="modal" class="modal" tabindex="-1">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Hi there!</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <p>Irene here-- if you're looking for my portfolio please head to <a href="https://irenepanis.netlify.app/" target="_blank">irenepanis.netlify.app</a> for the most recent version! This page was created in April 2023 and is a little outdated :)</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <section id="home">
       <h2>Hi there.</h2>
       <h3>I'm Irene Panis, a web developer and software engineer based in Southern California.</h3>
@@ -117,6 +141,8 @@
     <a href="assets/misc/Irene Panis Developer Resume.pdf" target="_blank"><img id="avatar" src="assets/img/avatar.png"></a>
     <span class="tooltip">Click me for my resume!</span>
   </div>
-    
+  
+  
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 </body>
 </html>
